--- a/css/styleone.css
+++ b/css/styleone.css
@@ -44,7 +44,11 @@ body,html{
 .styled-table tbody tr:last-of-type {
     border-bottom: 2px solid #800303; /*Adiciona uma borda escura à última linha para indicar o final da tabela*/
 }
-.styled-table tbody tr.active-row {
+.styled-table tbody tr#oneposition {
     font-weight: bold;
-    color: #800303;
+}
+
+.styled-table tbody tr.bronzecolor {
+    /*font-weight: bold;*/
+    color: #B87333;
 }
